Fixed green guy's size on mobile resolves #21

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -55,14 +55,8 @@ main.mdl-layout__content
   align-items: center
   flex-direction: column
 
-  .card-wrapper
-    display: flex
-    flex-direction: row
-    flex-wrap: wrap
-    justify-content: center
-  .card
-    flex: 1 1 auto
-    margin: 1em
+  .error_img
+    max-width: 90%
 
   .content
     .landing-login
